# P2kElfs

./: .gitignore  CMakeLists.txt  Makefile  Makefile.pc  P2kElfs.qbs  ReadMe.md  make_em2.bat  vNesC.c  vNesC.h  vP2k.c  vSdl2.c
Ambilight/: Ambilight.c  Ambilight.qbs  CMakeLists.txt  Makefile  ReadMe.md  make.bat  make_ep1.bat
Ambilight/docs/: Description_RU.txt
Ambilight/icons/: icon_ambilight_48x48.h
Ambilight/qtcreator/: Ambilight.files
BadApple/: BadApple.c  BadApple.qbs  BadApple_SDL2.c  CMakeLists.txt  Makefile  Makefile.mcore  ReadMe.md  make_ep1.bat  make_ep2.bat
BadApple/cybiko/: BadApple.c  Makefile  ReadMe.md  bmp2fbm.py
BadApple/qtcreator/: BadApple.config  BadApple.files
BadApple/res/: BadApple.m4a  BadApple.md  BadApple_160p.fbm  BadApple_220p.fbm  ReadMe.md  bmp2fbm.py
BattDump/: BattDump.c  BattDump.qbs  CMakeLists.txt  Makefile  ReadMe.md  make.bat  make_ep1.bat
BattDump/extended_notice/: BattDump_SEN.c  Makefile  make_ep1.bat
BattDump/qtcreator/: BattDump.files
Benchmark/: Benchmark.c  Benchmark.h  Benchmark.qbs  CMakeLists.txt  FireEffect.c  Makefile  Makefile.eg1  Makefile.mcore  Phases.c  Phases.h  ReadMe.md  delay_armv4t_ADS.s  delay_armv4t_ADS_fix.S  delay_armv4t_GCC.S  delay_armv4t_GCC.s  delay_l7e.S  delay_mcore340_GCC.S  dhry.h  dhry_1.c  dhry_2.c  make.bat  make_em1.bat  make_em2.bat  make_ep1.bat  make_ep2.bat  make_epmcore.bat
Benchmark/VibroSignal/: VibroSignal.c  make_ep1.bat
Benchmark/icons/: icon_benchmark_48x48.h
Benchmark/misc/DebugL7e/: CMakeLists.txt  DebugL7e.c  Makefile  make_ep1.bat
Benchmark/misc/OverclockCpu/: Makefile  OverclockCpu.c  make_ep1.bat
Benchmark/misc/VibroSignal/: Makefile  VibroSignal.c  make_ep1.bat
Benchmark/qtcreator/: Benchmark.config  Benchmark.files
Dumper/: CMakeLists.txt  Dumper.c  Dumper.qbs  Makefile  ReadMe.md  make.bat  make_ep1.bat
Dumper/icons/: icon_dumper_48x48.h
Dumper/qtcreator/: Dumper.config  Dumper.files
ElfBox/: CMakeLists.txt  ElfBox.c  ElfBox.qbs  Makefile  Makefile.eg1  ReadMe.md  make.bat  make_ep1.bat
ElfBox/icons/: icon_disk_15x15.h  icon_elf_15x15.h  icon_elf_gif.h  icon_elfbox_48x48.h  icon_file_15x15.h  icon_folder_15x15.h
ElfBox/qtcreator/: ElfBox.files
FireEffect/: CMakeLists.txt  FireEffect.c  FireEffect.qbs  Makefile  ReadMe.md  make.bat  make_ep1.bat  make_ep2.bat
FireEffect/black_and_white/: FireEffect_BW.c  Makefile  make_ep1.bat
FireEffect/qtcreator/: FireEffect.config  FireEffect.files
FlipDetector/: CMakeLists.txt  FlipDetector.c  FlipDetector.qbs  Makefile  ReadMe.md  make_ep1.bat
FlipDetector/qtcreator/: FlipDetector.files
Neko/: CMakeLists.txt  Makefile  Neko.c  Neko.qbs  ReadMe.md  make_ep1.bat
Neko/icons/: icon_neko_48x48.h
Neko/qtcreator/: Neko.files
Neko/res/: Pepe.ani  bmp2ani.py
Neko/skin/: Kitty.ani  ReadMe.md  Sheep.ani
Neko/skins/: Kitty.ani  Neco.ani  ReadMe.md  Vik89.ani
Overclock/: CMakeLists.txt  Clock.c  Makefile  Makefile.eg1  Overclock.c  Overclock.h  Overclock.qbs  ReadMe.md  make.bat  make_ep1.bat
Overclock/icons/: icon_overclock_48x48.h
Overclock/qtcreator/: Overclock.files
Perlin/: CMakeLists.txt  Engine.c  Engine.h  Makefile  Perlin.c  Perlin.qbs  ReadMe.md  Trig.c  Trig.h  make_ep1.bat  make_ep2.bat
Perlin/qtcreator/: Perlin.files
PowerAlert/: CMakeLists.txt  Makefile  PowerAlert.c  PowerAlert.qbs  ReadMe.md  make.bat  make_ep1.bat
PowerAlert/qtcreator/: PowerAlert.files
Screenshot/: CMakeLists.txt  Makefile  ReadMe.md  Screenshot.c  Screenshot.h  Screenshot.qbs  make.bat  make_ep1.bat
Screenshot/qtcreator/: Screenshot.config  Screenshot.files  Screenshot.includes
Snow/: CMakeLists.txt  Makefile  ReadMe.md  Snow.c  Snow.qbs  make_ep1.bat
Snow/icons/: icon_snow_48x48.h
Snow/qtcreator/: Snow.files
Spout/: CMakeLists.txt  Font.h  License.txt  Makefile  Piece.c  ReadMe.md  Sintable.h  Spout.c  Spout.h  Spout.qbs  make.bat  make_ep1.bat  make_ep2.bat
Spout/long_tail/: Piece.c  Spout.c  Spout.h  (+1 more)
VibroHaptic/: CMakeLists.txt  Makefile  ReadMe.md  VibroHaptic.c  VibroHaptic.qbs  make.bat  make_ep1.bat
Yeti3D/: CMakeLists.txt  Makefile  Makefile.mcore  Makefile.pc  Makefile.web  ReadMe.md  Yeti3D.lua  Yeti3D.map  Yeti3D.qbs  Yeti3D.rec  Yeti3D.sin  Yeti3D.spr  Yeti3D.tex  data.c  draw.c  extra.c  extra.h  game.c  main.c  main_p2k.c  main_p2k_task.c  main_sdl.c  main_sdl2.c  make_ep1.bat  make_ep2.bat  make_gba.bat  make_task.bat  model.c  readme.txt  sprites.c  swap_bytes.py  viewports.h  yeti.c  yeti.h
Yeti3D-Old/: CMakeLists.txt  Makefile  Makefile.mcore  Makefile.pc  Makefile.web  ReadMe.md  Yeti3D-Old.qbs  Yeti3D.c  Yeti3D.lua  Yeti3D.tex  data.c  data.h  main_sdl2.c  make_ep1.bat  make_ep2.bat  make_gba.bat  readme.txt  yeti.h
Yeti3D-Old/big-endian/: Yeti3D.lua  Yeti3D.sin
Yeti3D-Old/qtcreator/: Yeti3D-Old.config  Yeti3D-Old.files
Yeti3D-Old/web/: index.html
Yeti3D/big-endian/: Yeti3D.lua  Yeti3D.map  Yeti3D.rec  Yeti3D.sin  Yeti3D.spr
Yeti3D/old/: Makefile  Makefile.linux  Makefile.pc  ReadMe.md  Yeti3D.c  Yeti3D.lua  Yeti3D.rec  Yeti3D.sin  Yeti3D_OLD.qbs  data.c  data.h  draw.c  draw.cpp  main.c  main.cpp  make.bat  make_ep1.bat  make_ep2.bat  make_gba.bat  readme.txt  yeti.c  yeti.cpp  yeti.h
Yeti3D/old/big-endian/: Yeti3D.lua  Yeti3D.rec
Yeti3D/optimize/: CMakeLists.txt  Makefile  Makefile.pc  draw.c  game.c  main_p2k.c  main_p2k_task.c  main_sdl.c  make_ep1.bat  make_ep2.bat  make_task.bat  maps.c  viewports.h  yeti.c  yeti.h
Yeti3D/qtcreator/: Yeti3D.files
Yeti3D/tools/: color_convert.py  dump_res.c  swap_bytes.py
Yeti3D/web/: index.html
docs/: Build-CMake-CLion.md  Build-CMake-VisualStudioCode.md  Build-Qbs-Qt_Creator.md  ELFs-Debugging.md  GPUs-Motorola.md  Motorola_P2K_ELFs.bbcodes  Useful-Notes.md  symbols_of_all_elfs.sym
vNesC/: .gitignore  CMakeLists.txt  Makefile.eg1  Makefile.mcore  Makefile.pc  Makefile.sdl1  Makefile.sdl2  ReadMe.md  make_em2.bat  make_ep2.bat  vNesC.c  vNesC.h  vNesC.qbs  vP2k.c  vSdl1.c  vSdl2.c
vNesC/Siemens/: Func.asm  Main.c  ReadMe-ru_RU.txt
vNesC/qtcreator/: vNesC.config  vNesC.cxxflags  vNesC.files
(+13 files in other folders)
